ODPSH-50: fix missing alignment of herausgeber logos (right)

--- a/ckanext/odsh/public/odsh.css
+++ b/ckanext/odsh/public/odsh.css
@@ -761,7 +761,7 @@ body {
 .organization-image{
     max-width: 225px;
     max-height: 78px;
-    margin: auto;
+    margin-left: auto;
     display: block;
     text-align: center;
 }
